Thursday, January 29th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Updated the AUTHORS file.

Thursday, January 29th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Bumped version to 0.3.2, in preparation for a release
	  tommorow.

Thursday, January 29th, James Turner <james@worldforge.org>

        * Add a test for the timestamp/timediff code (not exhaustive
          by any means)

Thursday, January 29th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Fixed the TimeDiff constructor from milliseconds to
	  set the is_valid flag (thanks James!).

Tuesday, January 27th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Changed the Shuffle() function to use the new random
	  number API instead of the old one, and use
	  std::vector<>::size_type instead of unsigned for
	  greater portability. Added a basic test to make sure
	  it builds and runs.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Made the Quaternion costructor from a Vector<3> (for
	  a rotation around that axis) 'explicit'.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added round-off age checks to the functions where
	  Quaternion and RotMatrix<3> rotate each other.
	* Added rotate() convienience wrappers to RotMatrix,
	  Quaternion and Vector for cases where rotation
	  is just multiplication.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* wfmath/point.h, wfmath/axisbox.h, wfmath/axisbox_funcs.h,
	  wfmath/segment.h, wfmath/segment_funcs.h, wfmath/ball.h,
	  wfmath/rotbox.h, wfmath/rotbox_funcs.h, wfmath/polygon.h,
	  wfmath/polygon_funcs.h, wfmath/polygon.cpp: Added
	  Quaternion-based rotation functions and toParentCoords(),
	  toLocalCoords() to all shapes, in parallel to those
	  functions previously added to Point.
	* wfmath/rotmatrix*, wfmath/quaternion*: Added functions
	  to let RotMatrix<3> and Quaternion rotate each other.
	  RotMatrix<3>::rotate(Quaternion) was needed for
	  Quaternion-based rotation of RotBox<3>.
